--- a/WebApplication3/Pages/Shared/_Layout.cshtml
+++ b/WebApplication3/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Db/Index">Ostatnio Szukane</a>
                         </li>
+                        <partial name="_LoginPartial" />
                     </ul>
                 </div>
             </div>
